# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .cardboardlint.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeListsVersion.txt.in  README.rst  doxygen.conf.in  setup.cfg  setup.py
{{cookiecutter.project_slug}}/tools/: __init__.py  gitversion.py
{{cookiecutter.project_slug}}/tools/conda.recipe/: meta.yaml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: CMakeLists.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/test/: CMakeLists.txt  __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.py_project_slug}}/: HEADER
{{cookiecutter.project_slug}}/{{cookiecutter.py_project_slug}}/tools/conda.recipe/: meta.yaml
